--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 	<header>
 		<div class="container">
 
+			<button class="menu-abrir">Abre Menu</button>
+
 			<h1 class="logo">
-				<img src="img/logo.png" alt="Notícias.com">
+				<img src="img/logo.svg" alt="Notícias.com">
 			</h1>
 
 			<nav class="barra-nav">
+				<button class="menu-fechar">Fecha Menu</button>
+
 				<ul class="menu-principal">
 					<li><a href="noticias.html" class="noticias">Notícias</a>
 					<li><a href="esportes.html" class="esportes">Esportes</a>
